# page_loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter_test_check.yml
page_loader/: __init__.py  download.py  download_function.py  get_name.py  html.py  html_parser.py  logging.py  names.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_download.py  test_errors.py  test_html.py  test_names.py  test_other.py
